pushing entire project

--- a/APP/templates/article_detail.html
+++ b/APP/templates/article_detail.html
@@ -25,7 +25,8 @@
     <hr>
     <br>
     {{ post.body | safe}}
-
+    <hr>
+    Referências:
     <br><br>
     <a href="{% url 'home' %}" class="btn btn-secondary">Home</a>
 
