--- a/APP/templates/home.html
+++ b/APP/templates/home.html
@@ -7,6 +7,7 @@
         <h6>Welcome! You're logged in as <strong>{{ user.first_name }}</strong>.</h6>
     </div>
 {% endif %}
+<h4><strong>Clique no Artigo Desejado:</strong></h4>
 <div class="shadow-none p-3 mb-5 bg-light rounded">
 <ul>
     {% for post in object_list %}
