--- a/APP/templates/article_detail.html
+++ b/APP/templates/article_detail.html
@@ -27,6 +27,8 @@
     {{ post.body | safe}}
     <hr>
     Referências:
+    <br>
+    {{ post.referencia }}
     <br><br>
     <a href="{% url 'home' %}" class="btn btn-secondary">Home</a>
 
