--- a/APP/templates/base.html
+++ b/APP/templates/base.html
@@ -60,23 +60,24 @@
 
 
 
+        </div>
+      </div>
+    </nav>
+    
+    <br>
+    <br>
+    <div class="container">
+      {% block content %}
+      {% endblock %}
+      <div class="footerAuthor">
+        <small>By LFD</small>
+      </div>   
+      <div class="footerPowered">
+        <small>Powered by Django</small>
       </div>
     </div>
-  </nav>
-
-  <br>
-  <div class="container">
-    {% block content %}
-    {% endblock %}
-  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
-    <div class="footerAuthor">
-      By LFD
-    </div>   
-    <div class="footerPowered">
-      Powered by Django
-    </div>
 </body>
 </html>
